Relation of entity and generic service